Wed Dec  3 12:24:08 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (rb_io_getc, rb_io_readchar): documentation correction from
	  Emiel van de Laar.  [ruby-core:20212]

	* ext/stringio/stringio.c (strio_readchar): ditto.

Wed Dec  3 09:26:29 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/rexml/xpath.rb (REXML::XPath.first): apply documentation
	  patch from Ken Bloom in [ruby-core:20213].

	* lib/rexml/xpath.rb (REXML::XPath.each): ditto.

Wed Dec  3 02:56:34 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* test/ruby/test_rational.rb: add a test.

Wed Dec  3 02:53:24 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* test/ruby/test_range.rb: add a test.

Wed Dec  3 02:26:07 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* test/ruby/test_string.rb: add some tests.

Wed Dec  3 02:04:21 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* ext/pty/pty.c (Init_pty): fix typo.

Tue Dec  2 19:22:13 2008  Tanaka Akira  <akr@fsij.org>

	* lib/open3.rb (Open3.popen3): merge hash options if given. 

Tue Dec  2 15:31:42 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/net/protocol.rb (Net::BufferedIO#rbuf_fill): use
	  read_nonblock instead of sysread wrapped by timeout to boost
	  performance.  a patch from Aaron Patterson in [ruby-core:20191].
	  fix #806

Mon Dec  1 23:23:52 2008  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* set 1.9.1-p5000 into version number. [ruby-dev:36998]

Mon Dec  1 15:48:47 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* signal.c (register_sigaltstack): no need to define on non-sigaltstack
	  platform.

Mon Dec  1 12:00:45 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* cont.c (rb_fiber_start): calls with exact argument number.
	  [ruby-core:20088]

Sun Nov 30 21:41:10 2008  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* man/rake.1: new manual page

Sun Nov 30 18:01:50 2008  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* test/ruby/test_regexp.rb (TestRegexp#test_parse_curly_brace):
	  now accepts quantifier on anchrs agian by r20391.
