@@ -1,3 +1,8 @@
+Wed Dec  3 14:48:52 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* ext/tk/tcltklib.c (ip_ruby_cmd, ip_invoke_with_position): must
+	  not access internal union directly.  [ruby-list:45670]
+
 Wed Dec  3 12:24:08 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* io.c (rb_io_getc, rb_io_readchar): documentation correction from
